# pc700sdk

./: .gitignore  README.md  build.gradle  settings.gradle
700sdk/: build.gradle
700sdk/jni/: SerialPort.c
700sdk/src/android_serialport_api/: SerialPort.java  SerialPortFinder.java
700sdk/src/main/: AndroidManifest.xml
700sdk/src/main/assets/: 11_2024-06-13 14-56-50.xml  1_2024-06-17 10-36-47.xml  3_2024-06-18 183827.xml  ai_ecg_data.xml  hunan_local.xml
700sdk/src/main/jni/: CMakeLists.txt
700sdk/src/main/jni/offline/: CMakeLists.txt  native-lib.cpp
700sdk/src/main/jni/online/: CMakeLists.txt  native-lib.cpp
700sdk/src/main/jni/sigleEcg/: CMakeLists.txt  commalgorithm.cpp  sigleEcg.c  sigleEcg.cpp  sigleEcg.h  streamswtqua.cpp  swt.cpp
700sdk/src/main/res/drawable/: ic_loading.xml
700sdk/src/main/res/values/: colors.xml  strings.xml
app/: build.gradle  pc_700.keystore
app/libs/: ICDeviceManager.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_color_accent_4dp.xml  bg_color_checkglu.xml  bg_grey_32dp.xml  bg_with_title_rectangle_top_radius_8.xml  ic_inset.xml  progressbar_style.xml  rect_btn_bg_blue_n.xml  rect_btn_bg_blue_p.xml  ripple_btn_bg.xml  textview_style_stroke.xml
app/src/main/res/layout/: activity_main.xml  dialog_ecg12_filter_settings.xml  dialog_ecg_upload.xml  dialog_measure_bottom_setting.xml  dialog_upgrade.xml  fragment_blood.xml  fragment_bodyfat.xml  fragment_ecg12.xml  fragment_ecg_single.xml  fragment_idcardinput.xml  fragment_main.xml  fragment_setting.xml  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
(+184 files in other folders)
